Implemented functionality to edit profile settings and links to layout view

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,11 @@
   </head>
 
   <body>
-
+    <header>
+      <a href="/auth/login">Login</a>
+      <a href="/auth/signup">SignUp</a>
+      <a href="/user-profile">User</a>
+    </header>
     {{{body}}}
 
     <script src="/js/script.js"></script>
