--- a/views/characters/characters-list.hbs
+++ b/views/characters/characters-list.hbs
@@ -5,6 +5,8 @@
     <h4>{{this.name}}</h4>
     <p>{{this.characterClass}}</p>
     <p><strong>Level: </strong>{{this.level}}</p>
+    <p><strong>Owner: </strong>{{this.owner.username}}</p>
+
     
     <a href="/characters/{{this._id}}">See Details</a>
     
