--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -16,6 +16,8 @@
 
     <button type="submit">Log In</button>
 
+    <p>Don't have an Account? <a href="/auth/signup">Sign Up!</a></p>
+
 
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
