--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -15,7 +15,8 @@
     </label>
 
     <button type="submit">Sign Up</button>
-
+    
+    <p>Already have an Account? <a href="/auth/login">Log In!</a></p>
 
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
