--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,32 +1,62 @@
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>{{appTitle}}</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>👾 Bytes & Dungeons 🐲</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+</head>
 
-  <body>
-    <header>
-      {{#if currentUser}}
-        <h2>Logged as {{currentUser.username}}</h2>
-      {{/if}}
+<body>
 
-      <a href="/characters">Characters</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Bytes &amp; Dungeons</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/characters">Characters</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          {{#if currentUser}}
+          <li class="nav-item">
+            <a class="nav-link" href="/user-profile">{{currentUser.username}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/logout">Log Out</a>
+          </li>
+          {{else}}
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/login">Log In</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/signup">Sign Up</a>
+          </li>
+          {{/if}}
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-      {{#if currentUser}}
-        <a href="/user-profile">User</a>
-        <a href="/auth/logout">LOG OUT</a>
-      {{else}}
-        <a href="/auth/login">Login</a>
-        <a href="/auth/signup">SignUp</a>
-      {{/if}}
-    </header>
-    {{{body}}}
 
-    <script src="/js/script.js"></script>
-  </body>
+
+  {{{body}}}
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
+    integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i"
+    crossorigin="anonymous"></script>
+  <script src="/js/script.js"></script>
+</body>
 
 </html>
