Implment functionality to create characters with random stats + modify character model + adapt views

--- a/views/characters/character-details.hbs
+++ b/views/characters/character-details.hbs
@@ -6,7 +6,8 @@
 
 <p><strong>Level: </strong>{{character.level}}</p>
 
-<p><strong>Description: </strong>{{character.description}}</p> <hr>
+<p><strong>Description: </strong>{{character.description}}</p>
+<hr>
 
 <h2>Attributes:</h2>
 
@@ -14,28 +15,20 @@
 
 <p><strong>Strength: </strong>{{character.strength}}</p>
 
-<p><strong>Dexterity: </strong>{{character.dexterity}}</p>
-
-<p><strong>Constitution: </strong>{{character.constitution}}</p>
-
-<p><strong>Intelligene: </strong>{{character.intelligence}}</p>
-
-<p><strong>Wisdom: </strong>{{character.wisdom}}</p>
-
-<p><strong>Charisma: </strong>{{character.charisma}}</p>
+<p><strong>Defense: </strong>{{character.defense}}</p>
 
 <p><strong>Experience Points: </strong>{{character.experiencePoints}}</p>
 
 {{#if userIsOwner}}
-    <form action="/characters/{{character._id}}/edit" method="GET">
-        <button>EDIT CHARACTER</button>
-    </form>
+<form action="/characters/{{character._id}}/edit" method="GET">
+    <button>EDIT CHARACTER</button>
+</form>
 
-    <form action="/characters/{{character._id}}/delete" method="POST">
-        <button>DELETE</button>
-    </form>
+<form action="/characters/{{character._id}}/delete" method="POST">
+    <button>DELETE</button>
+</form>
 {{/if}}
 
 {{#if error}}
-    <p class="error">{{error}}</p>
+<p class="error">{{error}}</p>
 {{/if}}
