--- a/views/characters/characters-list.hbs
+++ b/views/characters/characters-list.hbs
@@ -2,22 +2,23 @@
 
 {{#each character}}
 
-    <h4>{{this.name}}</h4>
-    <p>{{this.characterClass}}</p>
-    <p><strong>Level: </strong>{{this.level}}</p>
-    <p><strong>Owner: </strong>{{this.owner.username}}</p>
+<h4>{{this.name}}</h4>
+<p>{{this.characterClass}}</p>
+<p><strong>Level: </strong>{{this.level}}</p>
+<p><strong>Owner: </strong>{{this.owner.username}}</p>
 
-    
-    <a href="/characters/{{this._id}}">See Details</a>
-    
-    <hr />
-    
+
+<a href="/characters/{{this._id}}">See Details</a>
+<a href="/characters/{{this.id}}/upgrade">Upgrade</a>
+
+<hr />
+
 {{else}}
-    <h3>No Characters in DB</h3>    
+<h3>No Characters in DB</h3>
 {{/each}}
 
 {{#if currentUser}}
-    <form action="/characters/create" method="GET">
-        <button>CREATE CHARACTER</button>
-    </form>
+<form action="/characters/create" method="GET">
+    <button>CREATE CHARACTER</button>
+</form>
 {{/if}}
