--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
-<div class="jumbotron jumbotron-fluid bg-dark text-light">
+<div
+    class="jumbotron jumbotron-fluid text-light text-center d-flex align-items-center justify-content-center jumbo-img">
     <div class="container">
         <h1 class="display-4">Welcome to Bytes &amp; Dungeons!</h1>
         <p class="lead">
@@ -27,14 +28,9 @@
                 and
                 more with ease.
             </p>
-            <p>
-                Whether you're a seasoned player or just starting out, Bytes &amp; Dungeons has everything you need to
-                make
-                your Dungeons &amp; Dragons experience unforgettable.
-            </p>
         </div>
         <div class="col-lg-4">
-            <img src="/images/dnd.png" alt="Dungeons &amp; Dragons" class="img-fluid" />
+            <img src="/images/dand-logo.png" alt="Dungeons &amp; Dragons" class="img-fluid" />
         </div>
     </div>
 </div>
