--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,9 +12,9 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Bytes &amp; Dungeons</a>
+      <a class="navbar-brand" href="/">👾 Bytes &amp; Dungeons 🐲</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
