--- a/views/game/game-lobby.hbs
+++ b/views/game/game-lobby.hbs
@@ -1,4 +1,11 @@
-<h2>Game Lobby</h2>
+<div class="text-center mt-5">
+    <div class="spinner-border" role="status">
+        <span class="visually-hidden">Waiting for another player...</span>
+    </div>
+    <br />
+    <h3 class="mt-3">Waiting for another player...</h3>
+    <h4 id="char-id">{{charId}}</h4>
+</div>
 
 
 <script src="/js/gameLobby.js"></script>
