--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,10 @@ body {
   background-color: #f4f4f4;
 }
 
+.skill-block {
+  width: 30%;
+}
+
 .navbar {
   color: black;
 }
@@ -63,6 +67,11 @@ body {
 .col-lg-4 img {
   width: 100%;
   height: 100%;
+}
+
+#char-details-img {
+  width: 100%;
+  height: 524px;
 }
 
 wavy-bg {
