--- a/views/characters/character-upgrade.hbs
+++ b/views/characters/character-upgrade.hbs
@@ -1,28 +1,54 @@
-<h2>Upgrade your Character</h2>
+<h1 class="text-center mb-5">Edit your Character ✏️</h1>
 
-<form action="/characters/{{character._id}}/upgrade" method="POST">
+<div class="container text-center">
+    <div class="row">
+        <div class="col-6">
+            <h3>{{character.name}}</h3>
+            <p>{{character.description}}</p>
+        </div>
+        <div class="col-6">
+            <div class="bg-danger p-2 rounded">
+                Experience Points <br>
+                ⭐
+                {{character.experiencePoints}}
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="row d-flex justify-content-center">
+        <div class="col-12 col-xl-6">
+            <form action="/characters/{{character._id}}/upgrade" method="POST">
 
-    <p><strong>Name: </strong>{{character.name}}</p>
-    <p><strong>Description: </strong>{{character.description}}</p>
+                <div class="mb-3 bg-primary p-2 rounded">
+                    <label class="form-label">Health Points:</label>
+                    <p>❤️</p>
+                    <input type="text" name="healthPoints" class="form-control" placeholder="New health points..." value="0">
+                </div>
 
-    <label>Health Points:
-        <input type="number" name="healthPoints" min="0" placeholder="UpgradePoints" value="0">
-    </label>
+                <div class="mb-3 bg-success p-2 rounded">
+                    <label class="form-label">Strength:</label>
+                    <p>💪🏻</p>
+                    <input type="text" name="strength" min="0" class="form-control" placeholder="New strength..." value="0">
+                </div>
 
-    <label>Strength:
-        <input type="number" name="strengthPoints" min="0" placeholder="UpgradePoints" value="0">
-    </label>
+                <div class="mb-3 bg-warning p-2 rounded">
+                    <label class="form-label">Defense:</label>
+                    <p>🛡️</p>
+                    <input type="text" name="defense" min="0" class="form-control" placeholder="New defense..." value="0">
+                </div>
 
-    <label>Defense:
-        <input type="number" name="defensePoints" min="0" placeholder="UpgradePoints" value="0">
-    </label>
+                <button class="btn btn-info">Save Changes</button>
 
-    <button type="submit">Submit Edit</button>
-
-</form>
-
-<p><strong>Experience Points available to use: </strong>{{character.experiencePoints}}</p>
+            </form>
+        </div>
+    </div>
+</div>
 
 {{#if error}}
-<p>{{error}}</p>
+<div class="container d-flex justify-content-center">
+    <div class="row">
+        <div class="col-12 center-text">
+            <h3 class="error center-text bg-danger p-3 rounded">{{error}}</h3>
+        </div>
+    </div>
 {{/if}}
