--- a/views/characters/characters-list.hbs
+++ b/views/characters/characters-list.hbs
@@ -14,6 +14,11 @@
                 <br /> <br />
                 Check out the characters created by the community!
             </p>
+            {{#if currentUser}}
+            <form action="/characters/create" method="GET" class="text-end">
+                <button class="btn btn-dark">CREATE CHARACTER</button>
+            </form>
+            {{/if}}
         </div>
     </div>
 </div>
