Implement matchmaking and initial game display
Co-authored-by: Cristian Palao <Dookietrukie@users.noreply.github.com>

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,6 +29,9 @@
         <ul class="navbar-nav">
           {{#if currentUser}}
           <li class="nav-item">
+            <a class="nav-link" href="/game">Play!</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/user-profile">{{currentUser.username}}</a>
           </li>
           <li class="nav-item">
