--- a/views/game/game-lobby.hbs
+++ b/views/game/game-lobby.hbs
@@ -1,19 +1,20 @@
 <div id="loading-page" class="">
-    <div class="d-flex justify-content-center">
-        <div class="spinner-border" role="status"></div>
-        <br />
-        <h4>Waiting for other players...</h4>
+     <div class="text-center">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <h2>loading</h2>
     </div>
-    <h2 id="char-id">{{charId}}</h2>
+    <h3 id="char-id">{{charId}}</h3>
 </div>
 
 <div id="game-page" class="visually-hidden">
     <h1>GAME</h1>
     <h3 id="user-id">{{userId}}</h3>
 
+    <h2>YOUR CHARACTER:</h2>
     <h2 id="player"></h2>
     <div id="my-char">
-        <h2 class="owner"></h2>
         <h2 class="name"></h2>
         <h2 class="health"></h2>
         <h2 class="strength"></h2>
@@ -22,6 +23,14 @@
 
     <hr />
 
+    <h2>ACTIONS</h2>
+    <div id="btn-menu">
+        
+    </div>
+
+    <hr />
+
+    <h2>ENEMY CHARACTER:</h2>
     <h2 id="enemy"></h2>
     <div id="enemy-char">
         <h2 class="name"></h2>
