--- a/views/user/user-profile.hbs
+++ b/views/user/user-profile.hbs
@@ -8,7 +8,7 @@
 
         <div class="user text-center mb-3">
             <div class="profile">
-                <img src="/images/profilepic.png" alt="Profile Img" />
+                <img src="{{user.userIconImgUrl}}" alt="Profile Img" />
             </div>
         </div>
 
