Add functionality to upload and edit images for characters

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -23,13 +23,9 @@
         </div>
 
         <div class="mb-3">
-          <label>Add your profile pic:</label>
-          <input type="file" name="profile-picture">
-        </div>
-
-        <div class="mb-3">
-          <label>Add your banner:</label>
-          <input type="file" name="banner-picture">
+          <label>Add your profile pic and your banner:</label>
+          <input name="profile-images" type="file" class="file" data-show-upload="true" data-show-caption="true"
+            multiple>
         </div>
 
         <div class="text-center">
