--- a/views/characters/character-details.hbs
+++ b/views/characters/character-details.hbs
@@ -1,6 +1,6 @@
 <div class="container mt-5 mb-5">
     <div class="row no-gutters">
-        <div class="col-md-4 col-lg-4"><img id="char-details-img" class="rounded" src="/images/char-placeholder.jpg">
+        <div class="col-md-4 col-lg-4"><img id="char-details-img" class="rounded" src="{{character.charImgUrl}}">
         </div>
         <div class="col-md-8 col-lg-8">
             <div class="d-flex flex-column">
@@ -59,4 +59,4 @@
             <h3 class="error center-text bg-danger p-3 rounded">{{error}}</h3>
         </div>
     </div>
-{{/if}}
+    {{/if}}
