--- a/views/characters/characters-list.hbs
+++ b/views/characters/characters-list.hbs
@@ -33,8 +33,7 @@
                 {{this.name}}
                 <span class="badge bg-secondary">{{this.characterClass}}</span>
             </h3>
-            <img class="card-img-top" src="https://th.bing.com/th/id/OIP.XSZAFm-5JI7nriDLwZqRQQHaE7?pid=ImgDet&rs=1"
-                alt="Card image" width="100" height="300">
+            <img class="card-img-top" src="{{this.charImgUrl}}" alt="Card image" width="100" height="300">
             <div class="card-body">
                 <h4 class="card-text">🎲 Level: {{this.level}}</h4>
                 <h4 class="card-text">🕵🏻‍♂️ Owner: {{this.owner.username}}</p>
