--- a/views/user/user-edit.hbs
+++ b/views/user/user-edit.hbs
@@ -3,7 +3,7 @@
 <div class="container d-flex justify-content-center align-items-center mt-5">
     <div class="card">
         <div class="upper">
-            <img src="/images/banner.png" alt="banner" />
+            <img src="{{user.bannerImgUrl}}" alt="banner" />
         </div>
 
         <div class="user text-center">
