--- a/views/characters/character-create.hbs
+++ b/views/characters/character-create.hbs
@@ -1,23 +1,42 @@
-<h2>Create your Character</h2>
+<div class="container d-flex justify-content-center text-center">
+    <div class="row">
+        <div class="col-12">
 
-<form action="/characters/create" method="POST">
+            <h2>Create your Character</h2>
 
-    <label>Name:
-        <input type="text" name="name">
-    </label>
+            <form action="/characters/create" method="POST" enctype="multipart/form-data">
 
-    <label>Class:
-        <select name="characterClass">
-            <option value="Bard">Bard</option>
-            <option value="Fighter">Fighter</option>
-            <option value="Wizard">Wizard</option>
-        </select>
-    </label>
+                <h4>Name:</h4>
+                <div class="form-floating mt-2">
+                    <input type="text" name="name" class="form-control" placeholder="Name of your character...">
+                    <label>Name of your character...</label>
+                </div>
 
-    <label>Description:
-        <textarea name="description" cols="30" rows="10"></textarea>
-    </label>
+                <h4 class="mt-3">Class:</h4>
+                <div class="form-group text-left">
+                    <label></label>
+                    <select name="characterClass" class="form-control">
+                        <option value="Bard">Bard</option>
+                        <option value="Fighter">Fighter</option>
+                        <option value="Wizard">Wizard</option>
+                    </select>
+                </div>
 
-    <button type="submit">Create</button>
+                <h4 class="mt-3">Description:</h4>
+                <div class="form-group">
+                    <label></label>
+                    <textarea name="description" rows="3" class="form-control"></textarea>
+                </div>
 
-</form>
+                <h4 class="mt-3">Character Image:</h4>
+                <div>
+                    <label></label>
+                    <input type="file" name="char-img" class="form-control">
+                </div>
+
+                <button class="btn btn-warning mt-4" type="submit">CREATE</button>
+
+            </form>
+        </div>
+    </div>
+</div>
