--- a/views/characters/character-edit.hbs
+++ b/views/characters/character-edit.hbs
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <form action="/characters/{{character._id}}/edit" method="POST">
+      <form action="/characters/{{character._id}}/edit" method="POST" enctype="multipart/form-data">
 
         <div class="mb-3">
           <label class="form-label">Name:</label>
@@ -13,7 +13,12 @@
           <input type="text" name="description" class="form-control" placeholder="New description">
         </div>
 
-        <div class="text-center mb-3">
+        <div>
+          <label class="form-label">New Image:</label>
+          <input type="file" name="char-new-img" class="form-control">
+        </div>
+
+        <div class="text-center mb-3 mt-3">
           <button type="submit" class="btn btn-success">Send Changes</button>
         </div>
 
