Add new text to the character list page replacing dummy text

--- a/views/characters/characters-list.hbs
+++ b/views/characters/characters-list.hbs
@@ -9,8 +9,8 @@
         <div class="container-fluid">
             <h1>Welcome to the Character Gallery</h1>
             <p class="col-md-8 fs-4">
-                Blah blah blah lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem
-                ipsum
+                In the gallery you can check out characters from all around the world. See the ilustrations, the
+                interesting background stories or take a look over the stats of a specific character!
                 <br /> <br />
                 Check out the characters created by the community!
             </p>
