--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,10 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>👾 Bytes & Dungeons 🐲</title>
+  {{!-- FavIcon Link--}}
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
+  {{!-- BOOTSTRAP CSS --}}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+
+  {{!-- OWN CSS--}}
   <link rel="stylesheet" href="/stylesheets/style.css" />
+
+  {{!-- FONTAWESOME FONT --}}
+
+
   {{!-- Socket.io client --}}
   <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"
     integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
@@ -28,6 +37,9 @@
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="nav-link" href="/characters">Characters</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about-us">About Us</a>
           </li>
         </ul>
         <ul class="navbar-nav">
@@ -61,6 +73,8 @@
     crossorigin="anonymous"></script>
 
   <script src="/js/script.js"></script>
+
+  <script src="https://kit.fontawesome.com/e3ced8e54c.js" crossorigin="anonymous"></script>
 
 </body>
 
