Fix upgrade button and view

--- a/views/characters/character-details.hbs
+++ b/views/characters/character-details.hbs
@@ -49,6 +49,8 @@
     <form action="/characters/{{character._id}}/delete" method="POST">
         <button class="btn btn-danger">DELETE</button>
     </form>
+
+    <a href="/characters/{{character._id}}/upgrade" class="btn btn-warning mb-3">UPGRADE</a>
 </div>
 {{/if}}
 
