--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,17 +89,13 @@ wavy-bg {
 }
 
 .upper {
-
   height: 180px;
-
 }
 
 .upper img {
-
   width: 100%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-
 }
 
 .user {
@@ -107,35 +103,106 @@ wavy-bg {
 }
 
 .profile img {
-
-
   height: 80px;
   width: 80px;
   margin-top: 2px;
   border-radius: 50%;
-
-
 }
 
 .profile {
-
   position: absolute;
   top: -50px;
   left: 38%;
   height: 90px;
   width: 90px;
   border: 3px solid #fff;
-
   border-radius: 50%;
-
 }
 
 .edit-profile {
-
   border-radius: 15px;
   padding-left: 20px;
   padding-right: 20px;
   height: 35px;
+}
+
+#preloader {
+  position: fixed;
+  top: 200;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#loader {
+  display: block;
+  position: relative;
+  left: 50%;
+  top: 30%;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #d40b0b;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+#loader:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #d83f11;
+  -webkit-animation: spin 3s linear infinite;
+  animation: spin 3s linear infinite;
+}
+
+#loader:after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #270f11;
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 @media (min-width: 992px) {
