--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -42,12 +42,14 @@
           <li class="nav-item">
             <a class="nav-link" href="/about-us">About Us</a>
           </li>
+          {{#if currentUser}}
+          <li class="nav-item">
+            <a class="nav-link bg-warning" href="/game">PLAY NOW</a>
+          </li>
+          {{/if}}
         </ul>
         <ul class="navbar-nav">
           {{#if currentUser}}
-          <li class="nav-item">
-            <a class="nav-link" href="/game">Play!</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="/user-profile">{{currentUser.username}}</a>
           </li>
